--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Translation App - Cursor Style</title>
+    <title>GAIA - Translation App</title>
   </head>
 
   <body class="bg-background-primary text-text-primary">
